# tx-swr32

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README  pyproject.toml  scrape.sh
.github/workflows/: deploy.yml
docs/: index.html
docs/superpowers/plans/: 2026-03-12-data-drawer.md
docs/superpowers/specs/: 2026-03-11-s2-flares-design.md  2026-03-12-data-drawer-design.md
queries/: dark_flaring.sql  export.sql  flaring.sql  load.sql  rrc.sql  schema.sql  transform.sql  views.sql
scripts/: analyze_waha_flaring.py  download_rrc.py  fetch_plumes.py  fetch_r3.py  fetch_vnf.py  parse_permit_details.py  parse_rrc.py  rrc_common.py  scrape_permit_details.py  scrape_permits.py  vendor.sh
web/: app.js  db.js  drawer.js  enhance.js  index.html  style.css
web/data/: detections.parquet  flare_leases.parquet  flares.parquet  gatherers.parquet  lease_footprints.parquet  leases.parquet  permits.parquet  plumes.parquet  production.parquet  wells.parquet
