[project]
name = "gaslight"
version = "0.1.0"
description = "Dark flaring analysis for the Permian Basin"
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "lxml>=6.0.2",
    "httpx",
    "duckdb>=1.5.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pandas>=2.3.3",
]
